--- a/bjjapp.html
+++ b/bjjapp.html
@@ -66,7 +66,7 @@
 
             </div>
 
-            <button id="myBtn">Open Modal</button>
+            <button id="myBtn"></button>
 
             
             <div id="myModal" class="modal" draggable="true">
