--- a/bjjapp.html
+++ b/bjjapp.html
@@ -66,8 +66,7 @@
 
             </div>
 
-            <button id="myBtn"></button>
-
+    
             
             <div id="myModal" class="modal" draggable="true">
 
@@ -176,6 +175,9 @@
    <P type="text" id="winner" value="Winner"> ___  </P> 
  
    <P type="text" id="winner" value="isWinner"> Wins!  </P>
+   <P type="text" id="loser" value="Loser"> ___  </P> 
+ 
+   <P type="text" id="loser" value="isLoser"> Loses!  </P>
  
   
 </div>
