--- a/landing.html
+++ b/landing.html
@@ -19,7 +19,7 @@
     <h1> Enter Competitors Info</h1>
     <p>Click On Name to Remove</p>
     <div class="inputcontain">
-    <button id="submitname" type="submit" form="nameform" value="Submit">Submit</button> 
+    <button id="submitname" type="submit" form="nameform" value="Enter Name">Submit</button> 
     
     <button class="startlanding" type="submit" form="" value="Submit">Start</button>
     <form id="nameform"></form> <input id="nameform2" onfocus="this.value=''" value="Enter Full Name" type:"submit">
